feat: 调整简历样式，支持更丰富的字体和主题色选择
